modify docker file